[package]
name = "github_page_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.20"
anyhow = "1.0.68"
axum = "0.6.1"
chrono = "0.4.23"
comrak = "0.15.0"
http = "0.2.8"
leptos = { path="../leptos/leptos", default-features = false, features = ["ssr", "stable"] }
pulldown-cmark = "0.9.2"
syntect = "5.0.0"
tokio = { version = "1.23.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["fs"] }
