[package]
name = "github_page_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros"] }
axum-core = "0.4.3"
chrono = "0.4.38"
comrak = "0.26.0"
http = "1.1.0"
hyper = "1.4.1"
maud = { version = "0.26.0", features = ["axum"] }
pulldown-cmark = "0.11.0"
syntect = "5.2.0"
tokio = { version = "1.39.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs"] }
